--- a/src/common/components/Header/style.css
+++ b/src/common/components/Header/style.css
@@ -2,12 +2,11 @@ header {
   grid-column: 1/2;
 
   color: var(--color-heading);
-  margin: 20vh 0;
+  margin-top: 20vh;
 }
 
 @media (min-width: 576px) {
   header {
-    margin: 22vh 0;
     grid-column: 2/11;
   }
 }
