--- a/src/common/components/Layout/typography.css
+++ b/src/common/components/Layout/typography.css
@@ -9,6 +9,7 @@ body {
 
 p {
   margin-bottom: 1.15rem;
+  color: var(--color-foreground);
 }
 
 h1,
@@ -16,10 +17,11 @@ h2,
 h3,
 h4,
 h5 {
-  margin: 2.75rem 0 1.05rem;
+  margin: 2em 0 1.05em;
   font-weight: 400;
   line-height: 1.15;
   line-height: var(--font-line-height-base);
+  color: var(--color-foreground);
 }
 
 h1 {
@@ -40,6 +42,10 @@ h4 {
   font-size: 1em;
 }
 
+h5 {
+  margin: 1em 0 1.05em;
+}
+
 small {
   font-size: 0.833em;
 }
@@ -55,7 +61,7 @@ strong {
   h3,
   h4,
   h5 {
-    margin: 2.75rem 0 1.05rem;
+    margin: 2.75em 0 1.05em;
     line-height: var(--font-line-height-base);
   }
 
@@ -73,5 +79,9 @@ strong {
 
   h4 {
     font-size: 1.2em;
+  }
+
+  h5 {
+    margin: 1.25em 0 0.5em;
   }
 }
