feat(footer): add it

--- a/src/common/components/Layout/root.css
+++ b/src/common/components/Layout/root.css
@@ -14,6 +14,7 @@
   --color-background: #fff;
   --color-foreground: #000;
   --color-heading: #929292;
+  --color-haze: #929292;
 
   /**
    * Grid config
