--- a/src/common/components/Box/grid.module.css
+++ b/src/common/components/Box/grid.module.css
@@ -1,9 +1,6 @@
-/**
- * grid
-*/
 .grid {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  padding-top: 4vh;
+  padding-bottom: 4vh;
 
   margin-left: calc(0px - (50vw - 50%));
   margin-right: calc(0px - (50vw - 50%));
@@ -16,8 +13,8 @@
 
 @media (min-width: 576px) {
   .grid {
-    padding-top: 10rem;
-    padding-bottom: 10rem;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
 
     display: grid;
     grid-template-columns: repeat(
@@ -27,6 +24,14 @@
     grid-column-gap: var(--grid-gutter);
 
     grid-column: 1/7;
+  }
+
+  .grid + .grid {
+    margin-bottom: -10vh;
+  }
+
+  .grid:last-child:not(:only-child) {
+    padding-bottom: 10vh;
   }
 }
 
@@ -48,19 +53,4 @@
 
   width: 100%;
   max-width: var(--grid-width);
-}
-
-/**
- * Theme
-*/
-.light {
-  background: var(--color-background);
-}
-
-.dark {
-  --color-background: #000;
-  --color-foreground: #fff;
-  --color-heading: #929292;
-
-  background: var(--color-background);
 }
