--- a/src/common/components/Box/grid.module.css
+++ b/src/common/components/Box/grid.module.css
@@ -1,3 +1,14 @@
+body {
+  padding-left: calc(var(--grid-gutter) / 2);
+  padding-right: calc(var(--grid-gutter) / 2);
+
+  margin-left: auto;
+  margin-right: auto;
+
+  width: 100%;
+  max-width: var(--grid-width);
+}
+
 .grid {
   padding-top: 4vh;
   padding-bottom: 4vh;
@@ -7,8 +18,24 @@
 
   padding-left: calc(50vw - 50%);
   padding-right: calc(50vw - 50%);
+}
 
-  grid-column: 1/2;
+/* Removes extra margin */
+.grid + .grid {
+  margin-bottom: -4vh;
+}
+
+/* Removes extra container */
+.grid .grid {
+  padding-left: 0;
+  padding-right: 0;
+
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.grid:last-child:not(:only-child) {
+  padding-bottom: 4svh;
 }
 
 @media (min-width: 576px) {
@@ -17,15 +44,15 @@
     padding-bottom: 10vh;
 
     display: grid;
-    grid-template-columns: repeat(
-      var(--grid-column),
-      calc(var(--grid-width) / var(--grid-column) - var(--grid-gutter))
-    );
+    grid-template-columns: repeat(var(--grid-column), 1fr);
     grid-column-gap: var(--grid-gutter);
+  }
 
+  .common {
     grid-column: 1/7;
   }
 
+  /* Removes extra margin */
   .grid + .grid {
     margin-bottom: -10vh;
   }
@@ -37,20 +64,13 @@
 
 @media (min-width: 769px) {
   .grid {
+    grid-template-columns: repeat(
+      var(--grid-column),
+      calc(var(--grid-width) / var(--grid-column) - var(--grid-gutter))
+    );
+  }
+
+  .common {
     grid-column: 1/13;
   }
-}
-
-.container {
-  padding-left: calc(var(--grid-gutter) / 2);
-  padding-right: calc(var(--grid-gutter) / 2);
-
-  margin-left: auto;
-  margin-right: auto;
-
-  padding-top: 0;
-  padding-bottom: 0;
-
-  width: 100%;
-  max-width: var(--grid-width);
 }
