feat(blog): list and content

--- a/src/components/Layout/root.css
+++ b/src/components/Layout/root.css
@@ -15,6 +15,7 @@
   --color-foreground: #000;
   --color-heading: #929292;
   --color-haze: #929292;
+  --color-cta: #015d8d;
 
   /**
    * Grid config
