feat(blog): post style

--- a/src/components/AboutMe/AboutMe.module.css
+++ b/src/components/AboutMe/AboutMe.module.css
@@ -1,3 +1,7 @@
+.divider {
+  border-top: 1px solid #ffffff40;
+}
+
 .about-me article > *:first-child,
 .about-me aside > *:first-child {
   margin-top: 0;
