--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -13,3 +13,37 @@
     grid-column: 2/11;
   }
 }
+
+.compactHeader {
+  border-bottom: 1px solid #eee;
+  width: 100%;
+  padding: 1em 0;
+
+  display: flex;
+  justify-content: space-between;
+}
+
+.compactHeader h1 {
+  font-size: 1rem;
+  color: var(--color-heading);
+  margin: 0;
+}
+
+.compactHeader strong {
+  color: var(--color-foreground);
+}
+
+.compactHeader span {
+  display: none;
+}
+
+.compactHeader nav a {
+  margin-left: 0.6em;
+  font-size: 1rem;
+}
+
+@media (min-width: 576px) {
+  .compactHeader span {
+    display: inline;
+  }
+}
