--- a/src/components/Layout/typography.css
+++ b/src/components/Layout/typography.css
@@ -10,6 +10,7 @@ body {
 p {
   margin-bottom: 1.15rem;
   color: var(--color-foreground);
+  font-size: 1em;
 }
 
 h1,
@@ -57,6 +58,15 @@ strong {
 em {
   color: var(--color-haze);
   font-style: normal;
+}
+
+li {
+  list-style: disc;
+}
+
+ul {
+  padding-left: 1.4em;
+  margin-bottom: 1.4em;
 }
 
 @media (min-width: 576px) {
