fix aspect ratio

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -66,11 +66,16 @@ import content from "../content";
 
     .hero {
       grid-column: 1/4;
-      aspect-ratio: 1.6;
+
       margin-bottom: 0;
 
       @supports not (aspect-ratio) {
         height: 500px;
+      }
+
+      @supports (aspect-ratio) {
+        aspect-ratio: 1.6;
+        height: auto;
       }
     }
 
