--- a/src/layout/post.astro
+++ b/src/layout/post.astro
@@ -53,8 +53,10 @@ const formatDate = (string) => {
 </html>
 
 <style lang="scss" global>
+  html,
   body {
     overflow-x: hidden;
+    width: 100vw;
   }
 
   .container-post {
@@ -85,16 +87,21 @@ const formatDate = (string) => {
     align-items: center;
     position: relative;
 
-    @supports not (aspect-ratio) {
+    @supports not (aspect-ratio: 1.6) {
       height: 390px;
     }
-    @supports (aspect-ratio) {
+
+    @supports (aspect-ratio: 1.6) {
       aspect-ratio: 1.6;
       height: auto;
     }
 
-    @media screen and (min-width: 800px) {
-      > div {
+    > div {
+      margin-top: calc(var(--unit) * 2);
+      margin-bottom: calc(var(--unit) * 4);
+
+      @media screen and (min-width: 800px) {
+        margin: 0;
         width: 70%;
       }
     }
@@ -126,24 +133,26 @@ const formatDate = (string) => {
   }
 
   .cover {
-    width: 40%;
-    margin-right: calc(var(--unit) * -4);
-    margin-left: calc(var(--unit) * 2);
+    height: 100%;
+    width: 30%;
 
     @media screen and (min-width: 800px) {
-      width: auto;
+      width: 40%;
+      height: auto;
       margin: 0;
     }
 
     img {
-      width: 100%;
+      height: 100%;
+      margin-right: -30%;
 
       @media screen and (min-width: 800px) {
-        width: auto;
+        height: auto;
         position: absolute;
         top: calc(var(--unit) * -8);
         height: calc(100% + calc(var(--unit) * 8));
         margin-left: calc(var(--unit) * 6);
+        margin-right: 0;
       }
     }
   }
