--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -27,7 +27,7 @@ const canonical = Astro.request.canonicalURL.href;
 <meta property="og:title" content={content.seo.site} />
 <meta property="og:description" content={description || content.seo.description}
 />
-<meta property="og:image" content="https://danilowoz.com/share.png" />
+<meta property="og:image" content="https://danilowoz.com/share-new.png" />
 <meta property="og:image:alt" content="@danilowoz" />
 <meta property="og:image:width" content="600" />
 <meta property="og:image:height" content="315" />
