--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -2,7 +2,7 @@
   href="https://github.com/danilowoz"
   target="_blank"
   rel="noreferrer"
-  title="Link to Twitter"
+  title="Link to Github"
 >
   <svg
     viewBox="0 0 256 250"
@@ -21,10 +21,10 @@
 </a>
 
 <a
-  href="https://github.com/danilowoz"
+  href="https://twitter.com/danilowoz"
   target="_blank"
   rel="noreferrer"
-  title="Link to Github"
+  title="Link to Twitter"
 >
   <svg
     viewBox="0 0 256 209"
