--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ import content from "../content";
       <span class="surface-2">{content.hero.headline}</span>
     </h1>
 
-    <h2 class="type_sub"><span class="surface-2">I'm</span> Danilo Woznica</h2>
+    <h2 class="type_sub">Danilo Woznica</h2>
 
     <div class="hero_social">
       <Social />
