--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,6 +33,8 @@ const experiments = allData.filter(({ type }) => type === "experiments");
   </head>
 
   <body>
+    <input class="debug" type="checkbox" />
+
     <main class="container grid">
       <Hero />
       <Headroom />
@@ -57,6 +59,82 @@ const experiments = allData.filter(({ type }) => type === "experiments");
   @media screen and (min-width: 800px) {
     .grid {
       padding-top: calc(var(--unit) * 8);
+    }
+  }
+
+  .debug {
+    display: none;
+  }
+
+  .debug:checked {
+    ~ .container {
+      background: #c9debb !important;
+      position: relative;
+
+      :global(.grid) {
+        position: relative;
+      }
+
+      &.grid:before,
+      &.grid:after {
+        content: "";
+        display: block;
+        background: #9593dd;
+        width: var(--unit);
+        position: absolute;
+        margin: 0;
+        top: calc(var(--unit) * 8);
+        bottom: calc(var(--unit) * 1);
+        outline: 1px dashed #7528ca;
+        z-index: 999;
+
+        background: repeating-linear-gradient(
+            45deg,
+            #8762d4 0px,
+            #8762d4 1px,
+            transparent 1px,
+            transparent 9px
+          )
+          #9693de !important;
+      }
+
+      &.grid:before {
+        left: calc(100% / 2.97 - var(--unit) / 2) !important;
+      }
+
+      &.grid:after {
+        left: calc((100% / 3) * 2 - var(--unit) / 2) !important;
+      }
+
+      :global(.footer),
+      :global(.hero),
+      :global(.section) {
+        outline: 1px dashed #7528ca;
+        background: #a8c4e4 !important;
+        position: relative;
+      }
+
+      :global(.section:after) {
+        content: "";
+        display: block;
+        background: #9593dd;
+        height: var(--unit);
+        bottom: calc(var(--unit) * -1);
+        position: absolute;
+        left: 0;
+        right: 0;
+        outline: 1px dashed #7528ca;
+        z-index: 999;
+
+        background: repeating-linear-gradient(
+            45deg,
+            #8762d4 0px,
+            #8762d4 1px,
+            transparent 1px,
+            transparent 9px
+          )
+          #9693de !important;
+      }
     }
   }
 </style>
