--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -2,7 +2,38 @@
   <article>
     <h2 class="type_main">About me</h2>
 
-    <div class="type_content"></div>
+    <div class="type_content">
+      <p>
+        It took me a while to realize that design is everywhere.
+        No matter where you look, feel, or interact, everything aims to solve a
+        problem and has its own purpose, regardless if it came from nature or it
+        was manufactured. Since I learned these lessons and many others in my
+        graduation in Design back in 2012, which was mostly focused on product
+        design, I’ve been trying to introduce most of the concepts from the
+        design process to different areas of my professional life, as much as I
+        can.
+      </p>
+
+      <p>
+        In my early coding career, which started in mid 2010, I realized that at
+        some level I could find the same problems both in conceptual design and
+        digital products. Because of that, I found in the ReactJs community many
+        opportunities to improve the way we interact with web applications, and
+        as a result, I could narrow the gap between the effort of building solid
+        applications with a great user experience. These challenges have helped
+        me shape the necessary skills to become a front-end developer driven by
+        problems to be solved.
+      </p>
+
+      <p>
+        This journey brought me to CodeSandbox, where I’m proud that my work
+        gets to many developers and it makes their life easier, providing a
+        remarkable experience to express their own ideas through coding, and
+        making products more enjoyable. Furthermore, <strong>the kinds of challenges I
+        face every day make me go beyond what inspires me and make me not only
+        solve problems but empower users to solve their problems themselves.</strong>
+      </p>
+    </div>
   </article>
 </section>
 
