--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ const experiments = allData.filter(({ type }) => type === "experiments");
       <Section title="Experiments" data={experiments} vertical />
       <Section title="Projects" data={projects} />
 
-      <!-- <About /> -->
+      <About />
 
       <Footer />
     </main>
