--- a/src/styles/_reset.css
+++ b/src/styles/_reset.css
@@ -13,6 +13,11 @@ body {
   background-color: rgba(255, 225, 0, 0.3);
 }
 
+strong {
+  font-weight: normal;
+  background-color: rgba(255, 225, 0, 0.3);
+}
+
 li {
   list-style: none;
 }
