--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -4,10 +4,10 @@
 
     <div class="type_content">
       <p>
-        It took me a while to realize that design is everywhere.
-        No matter where you look, feel, or interact, everything aims to solve a
-        problem and has its own purpose, regardless if it came from nature or it
-        was manufactured. Since I learned these lessons and many others in my
+        It took me a while to realize that design is everywhere. No matter where
+        you look, feel, or interact, everything aims to solve a problem and has
+        its own purpose, regardless if it came from nature or it was
+        manufactured. Since I learned these lessons and many others in my
         graduation in Design back in 2012, which was mostly focused on product
         design, I’ve been trying to introduce most of the concepts from the
         design process to different areas of my professional life, as much as I
@@ -29,9 +29,12 @@
         This journey brought me to CodeSandbox, where I’m proud that my work
         gets to many developers and it makes their life easier, providing a
         remarkable experience to express their own ideas through coding, and
-        making products more enjoyable. Furthermore, <strong>the kinds of challenges I
-        face every day make me go beyond what inspires me and make me not only
-        solve problems but empower users to solve their problems themselves.</strong>
+        making products more enjoyable. Furthermore,
+        <strong
+          >the kinds of challenges I face every day make me go beyond what
+          inspires me and make me not only solve problems but empower users to
+          solve their problems themselves.</strong
+        >
       </p>
     </div>
   </article>
