--- a/src/styles/_vars.css
+++ b/src/styles/_vars.css
@@ -6,7 +6,7 @@
 
   /* Colors */
   --surface-0: #181818;
-  --surface-1: #6d6d6d;
+  --surface-1: #535353;
   --surface-2: #767676;
   --surface-3: #f5f5f5;
   --color-brand: #003dee;
