--- a/src/layout/post.astro
+++ b/src/layout/post.astro
@@ -217,16 +217,16 @@ const formatDate = (string) => {
       white-space: nowrap;
     }
 
-    --color-text: #24292e;
+    --color-text: var(--surface-0);
     --color-background: #ffffff;
-    --token-constant: #6f42c1;
-    --token-string: #032f62;
+    --token-constant: var(--color-brand);
+    --token-string: var(--surface-0);
     --token-comment: #6a737d;
-    --token-keyword: #d73a49;
-    --token-parameter: #005cc5;
-    --token-function: #6f42c1;
+    --token-keyword: var(--color-brand);
+    --token-parameter: var(--color-brand);
+    --token-function: var(--color-brand);
     --token-string-expression: #a3be8c;
-    --token-punctuation: #24292e;
+    --token-punctuation: var(--surface-2);
     --token-link: #22863a;
 
     pre {
