--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -4,12 +4,18 @@
 
     <div class="type_content">
       <p>
+        Hey, my name is Danilo Woznica. I’m from a small town in the south of
+        Brazil where I was brought up, and now I live in one of the best places
+        to be a wine lover - have you tried a great bottle of Portuguese wine?
+      </p>
+
+      <p>
         It took me a while to realize that design is everywhere. No matter where
-        you look, feel, or interact, everything aims to solve a problem and has
-        its own purpose, regardless if it came from nature or it was
-        manufactured. Since I learned these lessons and many others in my
-        graduation in Design back in 2012, which was mostly focused on product
-        design, I’ve been trying to introduce most of the concepts from the
+        you look, how you feel or interact, everything aims to solve a problem
+        and has purposes, regardless if these things came from nature or were
+        manufactured. With these ideas in my mind, I made my way into Design
+        college back in 2012, which was mostly focused on product design, and
+        since then I’ve been trying to introduce most of the concepts from the
         design process to different areas of my professional life, as much as I
         can.
       </p>
@@ -17,12 +23,12 @@
       <p>
         In my early coding career, which started in mid 2010, I realized that at
         some level I could find the same problems both in conceptual design and
-        digital products. Because of that, I found in the ReactJs community many
-        opportunities to improve the way we interact with web applications, and
-        as a result, I could narrow the gap between the effort of building solid
-        applications with a great user experience. These challenges have helped
-        me shape the necessary skills to become a front-end developer driven by
-        problems to be solved.
+        digital products. Thanks to many friends, I was introduced to the
+        ReactJs community, where I found many opportunities to improve the way
+        we interact with web applications, and as a result, I could narrow the
+        gap between the effort of building solid applications with a great user
+        experience. These challenges have helped me shape the necessary skills
+        to become a front-end developer driven by problems to be solved.
       </p>
 
       <p>
