--- a/src/layout/post.astro
+++ b/src/layout/post.astro
@@ -19,7 +19,7 @@ const formatDate = (string) => {
 
 <html lang="en">
   <head>
-    <MainHead {title} description={tagline} />
+    <MainHead {title} description={tagline} image={false} />
   </head>
 
   <body>
