--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -19,12 +19,12 @@ const canonical = Astro.request.canonicalURL.href;
 <meta name="description" content={description || content.seo.description} />
 
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:site" content={content.seo.site} />
+<meta name="twitter:site" content={title || content.seo.site} />
 <meta name="twitter:creator" content="@danilowoz" />
 
 <meta property="og:url" content={canonical} />
 <meta property="og:type" content="blog" />
-<meta property="og:title" content={content.seo.site} />
+<meta property="og:title" content={title || content.seo.site} />
 <meta property="og:description" content={description || content.seo.description}
 />
 {image && (
@@ -33,4 +33,4 @@ const canonical = Astro.request.canonicalURL.href;
 <meta property="og:image:alt" content="@danilowoz" />
 <meta property="og:image:width" content="600" />
 <meta property="og:image:height" content="315" />
-<meta property="og:site_name" content={content.seo.site} />
+<meta property="og:site_name" content={title || content.seo.site} />
