--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -1,17 +1,14 @@
 ---
 import content from "../content";
+import "../styles/global.css"
 
 const { title, description, image = true } = Astro.props;
-const canonical = Astro.request.canonicalURL.href;
+const canonical = new URL(Astro.url.pathname, Astro.site).href;
 ---
 
 <title>{title ? `${title} | ` : ""}Danilo Woznica</title>
 
-<link
-  rel="stylesheet"
-  type="text/css"
-  href={Astro.resolve("../styles/global.css")}
-/>
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta charset="utf-8" />
 <link rel="preconnect" href="https://fonts.gstatic.com" />
