--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,14 +6,16 @@ import About from "../components/About.astro";
 import Footer from "../components/Footer.astro";
 import MainHead from "../components/MainHead.astro";
 
-const allData = Astro.fetchContent("./blog/*.md").sort((a, b) => {
+const blogsMd = await Astro.glob("./blog/*.md")
+const allData = blogsMd.sort((a, b) => {
   const dateA = new Date(a?.date ?? "").getTime();
   const dateB = new Date(b?.date ?? "").getTime();
 
   return dateB - dateA;
 });
 
-const projects = Astro.fetchContent("../content/*.md").sort((a, b) => {
+const contentMd = await Astro.glob("../content/*.md")
+const projects = contentMd.sort((a, b) => {
   if (a.order < b.order) {
     return -1;
   }
@@ -23,8 +25,9 @@ const projects = Astro.fetchContent("../content/*.md").sort((a, b) => {
   return 0;
 });
 
-const articles = allData.filter(({ type }) => type === "article");
-const experiments = allData.filter(({ type }) => type === "experiments");
+const articles = allData.filter(({ frontmatter }) => frontmatter.type === "article");
+const experiments = allData.filter(({ frontmatter }) => frontmatter.type === "experiments");
+
 ---
 
 <html lang="en">
